➖ remove nodemon and express

--- a/package.json
+++ b/package.json
@@ -1,8 +1,5 @@
 {
-  "devDnpependencies": {
-    "nodemon": "^2.0.13"
-  },
-  "devDependencies": {
-    "express": "^4.17.1"
-  }
+  "author": "Wiktoria Mielcarek",
+  "type": "module",
+  "devDependencies": {}
 }
