--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-images/maksim-istomin-BSx5n20J-qg-unsplash.jpg
-images/austronaut-in-wildernis.afphoto
+assets/maksim-istomin-BSx5n20J-qg-unsplash.jpg
+*.afphoto
 node_modules
